--- a/package.json
+++ b/package.json
@@ -3,21 +3,66 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "cleanapp": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean --force && yarn install && yarn start --reset-cache",
+    "up:clean": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean --force && yarn install && yarn start --reset-cache && expo start",
+    "start:clean": "expo start -c",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/core": "^7.23.3",
+    "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "babel": "^6.23.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-preset-expo": "^9.5.2",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
+    "moti": "^0.27.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "~0.72.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-notifier": "^1.9.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-snackbar": "^2.6.2",
+    "react-native-svg": "^14.1.0",
+    "react-native-tab-bar-footer": "^1.0.5",
+    "react-native-web": "~0.19.6",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~49.0.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "react-refresh": "~0.14.0"
+  },
+  "resolutions": {
+    "react-refresh": "~0.14.0"
   },
   "private": true
 }
