--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,22 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "jsx": "react-native",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@core/*": ["core/*"],
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+      // "@atomic": ["./atomic"],
+      // "@atomic/*": ["./atomic/*"],
+      // "test-utils": ["../testing/utils"],
+    }
+  },
+  "include": ["**/*.ts", "**/*.tsx"]
 }
