--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
     "babel": "^6.23.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-preset-expo": "^9.5.2",
@@ -39,6 +40,8 @@
     "react-native": "~0.72.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-iphone-screen-helper": "^2.1.1",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-notifier": "^1.9.0",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.3.0",
@@ -48,6 +51,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-tab-bar-footer": "^1.0.5",
     "react-native-web": "~0.19.6",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
