--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^14.1.0",
     "react-native-tab-bar-footer": "^1.0.5",
     "react-native-web": "~0.19.6",
