--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "baseUrl": "./src",
     "paths": {
       "@core/*": ["core/*"],
+      "@utils/*": ["utils/*"],
       "@assets/*": ["assets/*"],
       "@screens/*": ["screens/*"],
       "@components/*": ["components/*"]
