--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@babel/core": "^7.23.3",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
@@ -34,10 +40,12 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "lottie-react-native": "^6.6.0",
     "moti": "^0.27.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "~0.72.0",
+    "react-native-asset": "^2.1.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-iphone-screen-helper": "^2.1.1",
