--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "babel": "^6.23.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-preset-expo": "^9.5.2",
@@ -46,19 +48,24 @@
     "react-dom": "18.2.0",
     "react-native": "~0.72.0",
     "react-native-asset": "^2.1.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-iphone-screen-helper": "^2.1.1",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-notifier": "^1.9.0",
-    "react-native-paper": "^5.11.3",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^14.1.0",
+    "react-native-switch": "^1.5.1",
     "react-native-tab-bar-footer": "^1.0.5",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
