Criacao page cadastro, ajuste de rotas, lista de usuarios

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "cleanapp": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean --force && yarn install && yarn start --reset-cache",
-    "up:clean": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean --force && yarn install && yarn start --reset-cache && expo start",
+    "cleanapp": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean --force && npm install && npm start --reset-cache",
+    "up:clean": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean --force && npm install && npm start --reset-cache && expo start",
     "start:clean": "expo start -c",
     "start": "expo start",
     "android": "expo start --android",
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.23.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -46,8 +48,10 @@
     "moti": "^0.27.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-native": "~0.72.0",
     "react-native-asset": "^2.1.1",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
