--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stock-app",
+  "name": "inventra-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/material-top-tabs": "^6.6.6",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.51.0",
     "react-native": "~0.72.0",
     "react-native-asset": "^2.1.1",
+    "react-native-confirmation-code-field": "^7.3.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
