--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/material-top-tabs": "^6.6.6",
@@ -45,7 +45,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
-    "lottie-react-native": "^6.6.0",
+    "lottie-react-native": "5.1.6",
     "moti": "^0.27.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
