--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
-    "lottie-react-native": "5.1.6",
+    "lottie-ios": "3.4.1",
+    "lottie-react-native": "^6.7.0",
     "moti": "^0.27.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -72,6 +73,7 @@
     "react-native-switch": "^1.5.1",
     "react-native-tab-bar-footer": "^1.0.5",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
